syntax = "proto3";

option go_package = "lester-sys/proto";
package mensaje;

service Mission {
  rpc Oferta (MissionRequest) returns (MissionResponse);
  rpc ConfirmMission (ConfirmRequest) returns (ConfirmResponse);
  rpc NotificarEstrellas(AvisoRequest) returns (AvisoResponse);
  rpc NotificarGolpe(ConfirmRequest) returns (ConfirmResponse);
}

message AvisoRequest {
  string pj = 1;
  int32 riesgo = 2;
  int32 turnos = 3;
}

message AvisoResponse {}

message MissionRequest {
  int32 rechazo = 1;
}

message MissionResponse {
  bool  disp = 1;
  string botin = 2;
  string prob_f = 3;
  string prob_t = 4;
  string riesgo = 5;
}

message ConfirmRequest {
  bool conf = 1;
}

message ConfirmResponse {}